--- a/javascript/everyNth.html
+++ b/javascript/everyNth.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>deepFlatten</title>
+  <title>everyNth</title>
 </head>
 <body>
   <script>
-    const deepFlatten = arr => {
-      return [].concat(...arr.map( (item) => {
-        return !Array.isArray(item) ? item : deepFlatten(item)
-        }))
+    const everyNth = function (arr, nth) {
+      return arr.filter((item, index) =>{
+        return (index + 1) % nth === 0
+      })
     }
-    let arr = [1,[2],[[3],4],5]
-    console.log(deepFlatten(arr))
+    console.log(everyNth([1,2,3,4,5,6], 3))
   </script>
 </body>
 </html>
